// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mask deepCopy 1`] = `
Object {
  "a": "1",
  "b": Object {
    "d": "1",
  },
}
`;

exports[`mask shallowCopy 1`] = `
Object {
  "a": "1",
  "b": Object {
    "d": "1",
    "e": Object {
      "f": 7,
    },
  },
}
`;

exports[`mergeDeep 1`] = `
Object {
  "b": Object {
    "c": "c1",
    "c2": "c2",
  },
  "d": "d2",
  "e": "e1",
}
`;

exports[`mergeDeep 2`] = `
Object {
  "b": Object {
    "c2": "c2",
  },
  "d": "d2",
}
`;

exports[`sortObjectDeep 1`] = `
Object {
  "a": 1,
  "aa": 6,
  "b": 2,
  "c": Object {
    "d": Object {
      "aa": 1,
      "j": 5,
      "m": 4,
    },
    "dd": Array [
      3,
      2,
      1,
      0,
      55,
    ],
    "ddd": Array [
      "b",
      "c",
      "a",
    ],
    "m": "sdf",
  },
}
`;
